<resources>
    <!-- MAIN MENU -->
    <string name="app_name">APKOFIWIT</string>
    <string name="game_title">idkwtfisthis.apk</string>
    <string name="start_game">START</string>
    <string name="ranking_construct">RANKING [UNFINISHED]</string>
    <string name="credits">CREDITS</string>
    <!-- GAME SETUP -->
    <string name="game_setup">GAME SETUP</string>
    <string name="game_mode">MODE SET: </string>
    <string name="mode_set_time">TIME</string>
    <string name="mode_set_tiles">TILES</string>
    <string name="mode_default_time">0 m 25 s</string>
    <string name="mode_default_tiles">25 tiles</string>
    <string name="yellow_tiles">STRICTER\nJUDGEMENT\n;[YELLOW TILES]</string>
    <string name="blue_tiles">TILE / SCORE\nAMPLIFIER\n[BLUE TILES]</string>
    <string name="checkbox_blue_tiles">ACTIVATE</string>
    <!-- GENERATING ALERTDIALOG -->
    <string name="generating_map">GENERATING MAP...</string>
    <string name="test">TEST MESSAGE</string>
    <!-- IN GAME -->
    <string name="r_e_a_d_y_w_i_d_e"> R E A D Y . . . </string><!--11 OR 12 NUM INSIDE.-->
    <!-- RESULT PAGE -->
    <string name="result">RESULT</string>
    <string name="yl_nml">YL_NML</string>
    <string name="yl_on">YL_ON</string>
    <string name="bl">BL</string>
    <string name="perfect_plus">PERFECT+: </string>
    <string name="perfect">PERFECT: </string>
    <string name="great">GREAT: </string>
    <string name="good">GOOD: </string>
    <string name="bad">BAD: </string>
    <string name="miss">MISS: </string>
    <string name="wrong">WRONG: </string>
    <string name="goodz">GOODZ</string>
    <string name="all_perfect_plus">ALL PERFECT PLUS!!!!!</string>
    <string name="all_perfect">ALL PERFECT!!!!</string>
    <string name="full_combo">FULL COMBO!!!</string>
    <string name="full_combo_minus">FULL COMBO MINUS!!</string>
    <string name="no_wrong">NO WRONG!</string>
    <!-- ABORT -->
    <string name="pause">PAUSE</string>
    <string name="exit">EXIT</string>
    <string name="before_exiting_the_app">ARE YOU GOING TO EXIT THIS APP?\nYOUR CURRENT PROCESS WILL BE LOST!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <!-- FAILED TO LOAD-->
    <string name="ver_failed_to_load">VERSION FAILED LOADING.</string>
    <string name="credits_content_failed_to_load">CREDITS FAILED LOADING.</string>
</resources>