<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SETTING">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/setup_title"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/game_setup"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/modes_group"
            android:layout_width="345dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_title">

            <TextView
                android:id="@+id/gamemode_text"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_mode"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/mode_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/mode_set_time"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/mode_tiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mode_set_tiles"
                android:textSize="20sp" />

        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mode_details"
            android:layout_width="411dp"
            android:layout_height="448dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/ananother_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modes_group"
            tools:visibility="visible">

            <SeekBar
                android:id="@+id/change_diff"
                android:layout_width="0sp"
                android:layout_height="48sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:max="21"
                android:progress="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.225" />

            <TextView
                android:id="@+id/limit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ingame_status_gray"
                android:fontFamily="@font/roboto_mono"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/change_diff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/pure_linear"
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_diff">

                <TextView
                    android:id="@+id/yellow_text"
                    android:layout_width="266sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yellow_tiles"
                    android:textColor="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/blue_text">

                    <Spinner
                        android:id="@+id/set_judgement"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.636"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="0dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/judge_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pure_linear" />

            <LinearLayout
                android:id="@+id/another_linear"
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="93dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judge_text">

                <TextView
                    android:id="@+id/blue_text"
                    android:layout_width="266sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/blue_tiles"
                    android:textColor="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/blue_text">

                    <CheckBox
                        android:id="@+id/blue_active"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/checkbox_blue_tiles"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ananother_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mode_details">

            <Button
                android:id="@+id/start_the_game"
                android:layout_width="0sp"
                android:layout_height="64sp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/start_game"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exit_from_setup"
                android:layout_width="wrap_content"
                android:layout_height="64sp"
                android:layout_weight="0.25"
                android:text="@string/exit"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>